--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1>Testing site</h1>
+        <time>Home</title>
     </head>
     <body>
         <p>Hello world by raj patel</p>
