--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>Home</title>
     </head>
     <body>
-        <p>Hello world by raj patel</p>
+        <p>Hello world by raj patel
+            <a href="linkedin.com/in/patelrajb6">linkedin</a>
+        </p>
     </body>
 </html>
 
